2008-01-14  Sven Herzberg  <herzi@gnome-de.org>

	Fix the display of the old menubar by only using gtk_widget_show()
	instead of gtk_widget_show_all() on the main window.

	* src/ui/ui-main.c: hide the menubar successfully in the maemo port

2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Merge the outstanding Maemo changes from Jouni Roivas.

	* src/monkey/board.c,
	* src/monkey/board.h,
	* src/monkey/monkey.c,
	* src/monkey/monkey.h,
	* src/monkey/playground.c,
	* src/monkey/playground.h,
	* src/ui/Makefile.am,
	* src/ui/game-1-player-manager.c,
	* src/ui/game-1-player.c,
	* src/ui/game-1-player.h,
	* src/ui/global.h,
	* src/ui/main.c,
	* src/ui/state.c,
	* src/ui/state.h,
	* src/ui/ui-main.c,
	* src/ui/ui-main.h,
	* src/ui/ui-network-client.c: implement the maemo ui

2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Prepare the network game window for the maemo port.

	* data/netgame.glade,
	* src/ui/ui-network-client.c: modify the code and the glade file to
	work for GNOME and for Maemo

2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Prepare the game window for the maemo port.

	* src/ui/ui-main.c: modify the code to work for GNOME and for Maemo
	without changing the glade file

2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Add the right dependencies for the Maemo port. Based on the Maemo port
	of Monkey-Bubble which was created by Jouni Roivas.

	* configure.in: finish dependency tracking for the two builds

2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Fix dist to include every necessary file.

	* data/Makefile.am: always define dbus_in_files to get the files
	included even when calling 'make dist' in a gnome-configured build

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Get the file ready for merging the maemo build system

	* debian/control.in: added Jouni to the Maintainers

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Be able to specify different sections for Debian/Ubuntu and Maemo

	* debian/control,